# kortar

./: .gitignore  README.md  hello.py  initial.py  main.py  planner.py  pyproject.toml  start.py  video_assistant.py
common/: logger.py  progress.py  user_clarification.py  validators.py
evals/effects/: report.py
evals/overlay/: cases.py  evaluators.py  report.py
evals/planner/: __init__.py  cases.py  evaluators.py  report.py
tools/: __init__.py  analysis.py  audio.py  compress.py  content_analysis.py  doctor.py  effects.py  overlay.py  sync.py  text.py  transcript.py  transition.py  user_input.py
