[project]
name = "kortar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deepgram-captions>=1.2.0",
    "deepgram-sdk>=4.8.0",
    "dotenv>=0.9.9",
    "pillow>=11.3.0",
    "pydantic-ai>=0.4.9",
    "srt>=3.5.3",
    "structlog>=25.4.0",
    "typer>=0.16.0",
]
